{
    "name": "AppInput",
    "maps": [
        {
            "name": "MidiInput",
            "id": "535569ee-295c-49a3-97f5-debfe5d9ddb4",
            "actions": [
                {
                    "name": "Tap",
                    "type": "PassThrough",
                    "id": "ddff7c3e-d29f-490d-9504-2fc0457fd713",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TapPos",
                    "type": "PassThrough",
                    "id": "1474b346-dadb-44ea-b21c-013b08381248",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58f9e02c-5168-486f-b702-1a4e2b983b87",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a25350b8-d643-4c58-b023-826802f08406",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1603a4f1-d4b0-431b-a7d7-cd7f4ea4e752",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c3d7848-59f4-4cb3-ae15-5bded351be83",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}